helm-chart-staging/ingressnginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-xbillpay-staging
  namespace: xbillpay-staging-ns 
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx 
  tls:
  - hosts:  
    - staging.xbillpaysupport.com
    secretName: letsencrypt-staging
  rules:
  - host: staging.xbillpaysupport.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: xbillpay
            port:
              number: 9000
      - path: /wallet-api/(.*)
        pathType: Prefix
        backend:
          service:
            name: walletservice
            port:
              number: 9001
      - path: /transfer-api/(.*)
        pathType: Prefix
        backend:
          service:
            name: transferservice
            port:
              number: 9002
      - path: /payment-api/(.*)
        pathType: Prefix
        backend:
          service:
            name: paymentservice
            port:
              number: 9003
